# fungus

./: Cargo.toml  readme.md
src/: agent.rs  lib.rs  main.rs  simulate.rs  world.rs
