[package]
name = "fungus"
version = "0.1.0"
authors = ["Chris Oates <kryz.oatz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
argh = "0.1.4"
env_logger = "0.8.2"
image = "0.23.8"
log = "0.4.11"
rand = "0.7.3"
